Fixed box-sizing issue that caused a gap in some tables

--- a/CSS/Sketch/CSS/tables.css
+++ b/CSS/Sketch/CSS/tables.css
@@ -24,7 +24,10 @@ table {
 }
 .columnTable caption {display: none;}
 thead td {background: #CCC;}
-th, td {padding: 0 0.4em;}
+th, td {
+	box-sizing: border-box;
+	padding: 0 0.4em;
+}
 th[class^=col], td[class^=col] {
 	float: none;
 	margin-left: 0;
